--- a/Jobs-company/package.json
+++ b/Jobs-company/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Jobs-company",
   "version": "1.0.0",
-  "description": "",
   "main": "script.js",
   "scripts": {
     "test": "jest"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.2.3"
-  }
+  },
+  "description": ""
 }
